<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">행복한 출근</string>
  <string name="title_activity_device_scan">DeviceScanActivity</string>
  <string name="title_activity_application">DeviceScanActivity</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="ble_not_supported">BLE가 지원되지 않습니다.</string>
  <string name="desc_scanning">아래 버튼을 누른 후 출근 확인 장비에 터치해 주세요.</string>
  <string name="title_dialog_scanning">출근 확인</string>
  <string name="message_dialog_scanning">출근 장비를 찾는 중...</string>
  <string name="commute_success_title">출근완료</string>
  <string name="commute_success_message">출근처리가 완료 되었습니다.\n오늘도 행복한 하루 되시기 바랍니다. 감사합니다.</string>
  <string name="cannot_find_device_title">출근 확인 실패</string>
  <string name="cannot_find_device_message">출근 장비를 찾지 못했습니다. 다시한 번 장비에 터치해 주세요.</string>
  <string name="start_scanning">출근 확인</string>
  <string name="stop_scanning">출근 확인 중...</string>
  <string name="enable_wifi">와이파이를 활성화 중입니다. 잠시만 기다려주세요.</string>
  <string name="cannot_find_available_scanner">블루투스나 와이파이를 켜주시기 바랍니다.</string>
  <string name="confirm">확인</string>
  <string name="title_activity_scan">ScanActivity</string>
  <string name="target_macs_input_placeholder">TargetMac(복수개일 경우 \',\')</string>
  <string name="wifi_on_off">와이파이</string>
  <string name="bluetooth_on_off">블루투스</string>
  <string name="location_on_off">위치설정</string>
  <string name="sync_all">상태 확인하기</string>
  <string name="ble_receiver_activate">블루투스 출근</string>
  <string name="wifi_receiver_activate">와이파이 출근</string>
  <string name="rssi_label">신호세기</string>
  <string name="target_mac_label">target mac</string>
</resources>
