<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.zoyi.commutecheck.app.Activity.DeviceScanActivity"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/device_scan" android:background="@color/white">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/commute_msg"
            android:textSize="20dp" android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/textView" android:layout_alignEnd="@+id/textView"/>
  <Button android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          style="@style/PrimaryBtn"
          android:text="Active"
          android:id="@+id/toggle_scan"
          android:clickable="true"
          android:onClick="toggleScan" android:layout_gravity="center_horizontal|bottom" android:alpha="0.8"
          android:textStyle="bold"
          android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
          android:layout_marginBottom="96dp"/>
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/desc_scanning"
    android:id="@+id/textView" android:layout_gravity="center_horizontal|top"
    android:background="#28f0f0f0"
    android:gravity="center"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:textStyle="normal"
    android:textSize="25dp"
    android:layout_centerHorizontal="true" android:layout_alignParentBottom="true" android:layout_marginBottom="186dp"/>
  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/commute_msg" android:layout_alignStart="@+id/toggle_scan">

    <android.support.design.widget.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text" android:id="@+id/targetMacs" android:hint="@string/target_macs_input_placeholder"/>
  </android.support.design.widget.TextInputLayout>
  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true" android:layout_alignParentTop="true" android:layout_marginTop="101dp"
  >
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_alignParentTop="true"
      android:layout_alignStart="@+id/toggle_scan">
      <Switch
        android:text="@string/bluetooth_on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bluetooth_on_off"
        android:layout_alignStart="@+id/toggle_scan" android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_weight="1"/>
      <Switch
        android:text="@string/wifi_on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wifi_on_off" android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_alignStart="@+id/toggle_scan" android:layout_weight="1"/>
      <Switch
        android:text="@string/location_on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/location_on_off" android:layout_weight="1"/>
    </LinearLayout>
    <Button
      android:text="@string/sync_all"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" android:id="@+id/sync_all"
      android:onClick="syncAllBtn"/>
  </LinearLayout>

</RelativeLayout>
